# ventriloquist

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: imessage_threading_fields.md
scripts/: monitor_training.py  setup_training.sh
src/: __init__.py
src/collection/: __init__.py  id_normalization.py  imessage_logger.py
src/database/: __init__.py  attachment_cache.py  common.py  create_tables.py  group_chat_stats.py  message_stats.py  messages.py  training_data.py
src/deploy-to-mac/: README.md  id_normalization.py  models.py  pyproject.toml  simple_imessage_logger.py
src/gemini/: __init__.py  client.py  content_types.py  convert.py  describe.py
src/inference/: __init__.py  checkpoints.py  formatting.py  imessage.py  interactive.py  live_chat.py  utils.py
src/models/: __init__.py  attachment.py  contact.py  group_chat.py  message.py  message_stats.py  training_message.py
src/preprocessing/: __init__.py  generate_windows.py  make_training_messages.py  pyproject.toml  utils.py
src/training/: __init__.py  config.py  data.py  evaluate.py  inference.py  pyproject.toml  train.py
