[project]
name = "ventriloquist"
version = "0.1.0"
description = "Message prediction system with iMessage logging, preprocessing, and training"
requires-python = ">=3.12"
dependencies = [
    # Collection/Database
    "aiosqlite>=0.19.0",
    "phonenumbers>=9.0.0,<10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=14.1.0,<16.0.0",
    # Preprocessing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Inference (works on all platforms including Mac)
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "torch>=2.0.0",
    "datasets>=2.18.0",
    # Logging
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Fast training with unsloth (requires NVIDIA/AMD/Intel GPU)
train = [
    "unsloth>=2024.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
