[project]
name = "ventriloquist-deploy"
version = "0.1.0"
description = "iMessage logger that syncs messages to local SQLite database"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "phonenumbers>=9.0.0,<10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=14.1.0,<16.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]