[project]
name = "ventriloquist-preprocessing"
version = "0.1.0"
description = "Preprocessing pipeline for iMessage data"
requires-python = ">=3.12"
dependencies = [
    # Add preprocessing dependencies here as needed
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]