[project]
name = "ventriloquist-training"
version = "0.1.0"
description = "Model training pipeline for message prediction"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Add training dependencies here as needed
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]